# datacrew

./: CSTAR-Model.docx  CSTAR-Model.txt  README.md  cstar-v1.md  cstar.ipynb  cstar.md  pyproject.toml  report.md  test.ipynb
src/datacrew/: crew.py  main.py
src/datacrew/config/: agents.yaml  tasks.yaml
