[project]
name = "datacrew"
version = "0.1.0"
description = "datacrew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3"
]

[project.scripts]
datacrew = "datacrew.main:run"
run_crew = "datacrew.main:run"
train = "datacrew.main:train"
replay = "datacrew.main:replay"
test = "datacrew.main:test"
run_with_trigger = "datacrew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
