[project]
name = "datacrew"
version = "0.1.0"
description = "datacrew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "crewai[file-processing,tools]==1.9.3",
    "ddgs>=9.10.0",
    "fastapi>=0.128.4",
    "fastapi-sso>=0.20.0",
    "ipykernel>=7.2.0",
    "litellm>=1.75.3",
    "pydantic[email]>=2.11.10",
    "tavily-python>=0.7.21",
]

[project.scripts]
datacrew = "datacrew.main:run"
run_crew = "datacrew.main:run"
train = "datacrew.main:train"
replay = "datacrew.main:replay"
test = "datacrew.main:test"
run_with_trigger = "datacrew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
